# pyodide-desktop-offline

./: CHANGELOG.md  Cargo.toml  README.md
pyodide/: console.html
scripts/: download_pyodide.bat  download_pyodide.ps1
src/: main.rs
